# nirwals

./: .gitignore  README.md  check_variance.py  compare_ramps.py  dev__cubeinspect.py  dev__cubemath.py  dev__dummyplot.py  dev__find_previous_frame.py  dev__fitpersistencysignal.py  dev__fixbiasdips.py  dev__mptest.py  dev__refpixel_calibrate.py  dev__rowaverage.py  edge_subtract.py  mpfitter.py  nirwals_darkcorrect.py  nirwals_explorer.py  nirwals_makemasterdark.py  nirwals_reduce.py  plotcube.py  provenance.py  pyproject.toml  requirements.txt  rss_explorer.py  rss_filepicker.py  rss_plotpixel.py  rss_reduce.py  rss_refpixel_calibrate.py  rssnir__fit_nonlinearity.py  rssnir_makedark.py  setup.cfg.old  setup.py  single_pixel_check.py
.github/workflows/: pipy_release.yml  release_to_pypi.yml
dev/: ampwise_gains.py  check_gains.py  check_variance.py  compare_ramps.py  dev__check_refpixel_trends.py  dev__find_previous_frame.py  dev__mptest.py  dev__parallel_correct_nonlinearity.py  dev__rowaverage.py  prepare_effective_noise.py
docs/source/: api.rst  conf.py  data_products.rst  index.rst  install.rst  usage_fit_nonlinearity.rst  usage_provenance.rst  usage_reduce.rst  usage_watchdog.rst
scripts/: refpixel_noisestats.py
src/: dev__fitpersistencysignal.py  mpfitter.py  nirwals__fit_nonlinearity.py  nirwals_darkcorrect.py  nirwals_explorer.py  nirwals_fit_nonlinearity.py  nirwals_reduce.py  nirwals_stalker.py  nirwals_watchdog.py
src/nirwals/: __init__.py  dev__cubeinspect.py  dev__cubemath.py  dev__dummyplot.py  dev__fitpersistencysignal.py  dev__fixbiasdips.py  dev__mptest.py  dev__rowaverage.py  mpfitter.py  nirwals.py  nirwals__fit_nonlinearity.py  nirwals_explorer.py  nirwals_fit_nonlinearity.py  nirwals_makedark.py  nirwals_plotpixel.py  nirwals_reduce.py  nirwals_urg_algorithms.py  nirwals_watchdog.py  plotcube.py  provenance.py  (+2 more)
(+1 files in other folders)
